deploy/k8s/apps/pgadmin/middleware-forward-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pgadmin-forward-prefix
  namespace: myapp
spec:
  headers:
    customRequestHeaders:
      X-Script-Name: /pgadmin
      X-Forwarded-Prefix: /pgadmin
