deploy/k8s/apps/pgadmin/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pgadmin-strip-prefix
  namespace: myapp
spec:
  stripPrefix:
    prefixes:
      - /pgadmin
