deploy/k8s/apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: myapp
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
