deploy/k8s/apps/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "300"
    traefik.ingress.kubernetes.io/router.middlewares: myapp-pgadmin-forward-prefix@kubernetescrd
spec:
  tls:
    - hosts:
        - dev.example.com
      secretName: dev-myapp-io-tls
  rules:
    - host: dev.example.com
      http:
        paths:
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8080
